# funlab

./: pyproject.toml
funlab/models/: __init__.py  user.py
funlab/web/: acl.py
funlab/web/forms/: __init__.py  accounts.py
funlab/web/templates/accounts/: login.html  register.html
funlab/web/templates/base/: banner.html  default-page.html
funlab/web/views/: accounts.py  sites.py
scripts/: init-admin.py  run-web
